Soften the RSAB-over-RSWG-last-call discussion

--- a/draft-hoffman-rfc9280-updates.mkd
+++ b/draft-hoffman-rfc9280-updates.mkd
@@ -188,7 +188,7 @@ The following is added immediately following that sentence:
 
 # Processing Drafts from the RSWG
 
-%% RSAB role in running the full-community last call, such as deciding when it is finished, what the RSWG Chairs should do after that, mailing lists, and so on. %%
+%% Maybe clarify RSAB role in running the full-community last call, such as deciding when it is finished, what the RSWG Chairs should do after that, mailing lists, and so on. %%
 
 # Security Considerations
 
